# Optimal-Execution

./: .gitignore  BEFORE_AFTER_COMPARISON.md  CHANGELOG.md  FUTURE ROADMAP.md  GITHUB_UPLOAD_GUIDE.md  README.md  REPOSITORY_STATUS.md  pyproject.toml  requirements.txt  setup.py
code/: calibrator.py  example.py  solver.py  solver_dp.py  solver_sqp.py
docs/: FIXES_HISTORY.md  Limitations.md  METHODOLOGY.md  THEORY.md  USAGE.md  theory.md
docs/images/results/: README.md
examples/: compare_solvers.py  monte_carlo_simulation.py  quickstart.py
notebooks/: README.md
optimal_execution/: __init__.py
optimal_execution/calibration/: __init__.py
optimal_execution/config/: __init__.py
optimal_execution/constraints/: __init__.py
optimal_execution/models/: __init__.py
optimal_execution/solvers/: __init__.py
optimal_execution/utils/: __init__.py
scripts/: README.md
tests/: __init__.py  conftest.py
